[metadata]
name = robot-log-visualizer
description = Visualizer for robot logger
author = 'Giulio Romualdi, Ines Sorrentino, Paolo Maria Viceconte'
author_email = 'giulio.romualdi@iit.it, ines.sorrentino@iit.it, paolo.viceconte@iit.it'
license = BSD3
license_file = LICENSE
url = https://github.com/ami-iit/robot-log-visualizer
version = 0.1.0
platforms = any

keywords =
    robotics
    visualizatiion

[options]
packages = find:
python_requires = >=3.8
install_requires =
   idyntree
   meshcat
   numpy
   PyQt5
   PyQtWebEngine
   pyqtconsole
   matplotlib
   h5py

[options.entry_points]
console_scripts =
   robot-log-visualizer = robot_log_visualizer.__main__:main
