# Copyright (C) 2022 Istituto Italiano di Tecnologia (IIT). All rights reserved.
# This software may be modified and distributed under the terms of the
# Released under the terms of the BSD 3-Clause License

[metadata]
name = robot-log-visualizer
description = Visualizer for robot logger
long_description = file: README.md
long_description_content_type = text/markdown
author = Giulio Romualdi
author_email = giulio.romualdi@gmail.com
license = BSD3
license_file = LICENSE
url = https://github.com/ami-iit/robot-log-visualizer
platforms = any

keywords =
    robotics
    visualization

project_urls =
    Changelog = https://github.com/ami-iit/robot-log-visualizer/releases
    Tracker = https://github.com/ami-iit/robot-log-visualizer/issues
    Source = https://github.com/ami-iit/robot-log-visualizer

classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Software Development
    Framework :: Robot Framework
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.8
install_requires =
    idyntree >= 10.2.0
    meshcat
    numpy
    PySide2
    qtpy
    pyqtconsole
    h5py
    pyqtgraph
include_package_data = True

[options.entry_points]
console_scripts =
   robot-log-visualizer = robot_log_visualizer.__main__:main

[options.package_data]
* = *.png, *.svg, *.ui
